--- a/template/videoApp/video.index.htm
+++ b/template/videoApp/video.index.htm
@@ -81,7 +81,7 @@
                     </ul>
                 </div>
                 <div class="filter_item filter_item_v2">
-                    <h3 class="filter_title"><i></i>类型</h3>
+                    <h3 class="filter_title"><i></i>Способ доставки</h3>
                     <ul class="filter_list">
                         <!--{iCMS:prop:array loop="true" field="genre" sapp="video" row="14"}-->
                         <li>
@@ -163,7 +163,7 @@
                     <div class="tabs-content">
                         <div class="tabs-pane" id="tabs_c0">
                             <div class="kwLink">
-                                <b>相关标签:</b>
+                                <b> Связанные теги:</b>
                                 <!--{iCMS:tag:list loop="true" row="20" orderby="hot" cid="$category.cid"}-->
                                 <a href="<!--{$tag_list.url}-->" target="_blank">
                                     <!--{$tag_list.name}-->
@@ -207,7 +207,7 @@
                         <!--{foreach value="catlist" from="$category_list"}-->
                         <div class="tabs-pane hide" id="tabs_c<!--{$catlist.cid}-->">
                             <div class="kwLink">
-                                <b>相关标签:</b>
+                                <b> Связанные теги:</b>
                                 <!--{iCMS:tag:list loop="true" row="20" orderby="hot" cid="$catlist.cid"}-->
                                 <a href="<!--{$tag_list.url}-->" target="_blank">
                                     <!--{$tag_list.name}-->
