--- a/template/videoApp/video.list.htm
+++ b/template/videoApp/video.list.htm
@@ -41,7 +41,7 @@
                 <div class="sort-section">
                     <a href="javascript:void(0)" id="filter_more_0" class="btn-sort-section filter_more" style="">更多<i></i></a>
                     <a href="javascript:void(0)" id="filter_fold_0" class="btn-sort-section on filter_fold" style="display:none">收起<i></i></a>
-                    <div class="sort-tit">类型</div>
+                    <div class="sort-tit">Способ доставки</div>
                     <a href="<!--{'genre=null&page=null'|url}-->" id="sort_tab_genre_" class="btn-sort-all sort-tab on">全部</a>
                     <div id="sort_box_0" class="sort-box">
                         <!--{iCMS:prop:array loop="true" field="genre" sapp="video"}-->
