--- a/template/videoApp/video.story.htm
+++ b/template/videoApp/video.story.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="ru">
 
 <head>
     <title>
@@ -35,7 +35,7 @@
                         <div class="section_aside">
                             <div id="cartoon_hot_list">
                                 <div class="section_aside_tit hotlist-tit">
-                                    <h2>热播榜</h2>
+                                    <h2>Популярное</h2>
                                 </div>
                                 <div class="section_aside_hotlist">
                                     <ul class="section_aside_lst section_aside_lst_score">
@@ -71,7 +71,7 @@
                         <div class="sort_nav clearfix" id="subnav">
                             <div class="sort_nav_bx">
                                 <ul class="sort_nav_lst">
-                                    <li class="top_nav_li active"><a href="#tab-ulike" data-target="#tab-ulike" data-toggle="tab">猜你喜欢</a></li>
+                                    <li class="top_nav_li active"><a href="#tab-ulike" data-target="#tab-ulike" data-toggle="tab">Вам также может понравиться</a></li>
                                 </ul>
                             </div>
                         </div>
