--- a/app/admincp/ui/iCMS.css
+++ b/app/admincp/ui/iCMS.css
@@ -105,7 +105,7 @@ a:hover { text-decoration: none; }
 .clear_in { overflow: hidden; zoom: 1 }
 .clearfix:before, .clearfix:after { display: table; content: "" }
 .clearfix:after { clear: both }
-.clearfix { zoom: 1; clear: both; height: 1px; }
+.clearfix { zoom: 1; clear: both; }
 .clear { display: block; visibility: hidden; clear: both; overflow: hidden; width: 0; height: 0 }
 .posr { position: relative }
 .posa { position: absolute }
@@ -153,7 +153,7 @@ a:hover { text-decoration: none; }
 
 /* IE7 fix*/
 .clearfix {height: 0px;}
-.btn { +margin-top: 1px; }
+.btn {margin-top: 1px; }
 
 /*.iCMS_UI_DIALOG-backdrop{opacity: 0.3 !important;}*/
 .iCMS_UI_DIALOG { -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;    /*border: 1px solid #888;*/ border: 0px; -webkit-box-shadow: 0 6px 8px rgba(102,119,136,.03), 0 1px 2px rgba(102,119,136,.3); -moz-box-shadow: 0 6px 8px rgba(102,119,136,.03), 0 1px 2px rgba(102,119,136,.3); box-shadow: 0 6px 8px rgba(102,119,136,.03), 0 1px 2px rgba(102,119,136,.3); background: #fff; z-index: 99999 !important; }
