--- a/template/askApp/ask.list.htm
+++ b/template/askApp/ask.list.htm
@@ -73,7 +73,7 @@
                         <div class="tabs-content">
                             <div class="tabs-pane" id="tabs_c0">
                                 <div class="kwLink">
-                                    <b>相关标签:</b>
+                                    <b> Связанные теги:</b>
                                     <!--{iCMS:tag:list loop="true" row="20" orderby="hot" sub="all" cid="$category.cid"}-->
                                     <a href="<!--{$tag_list.url}-->" target="_blank">
                                         <!--{$tag_list.name}-->
