--- a/template/videoApp/video.play.htm
+++ b/template/videoApp/video.play.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="ru">
 
 <head>
     <title>
@@ -34,12 +34,12 @@
 						<div class="player_section">
                             <ul class="nav nav-tabs">
                                 <li class="active">
-                                    <a href="javascript:;" data-target="#<!--{$player.from}-->-tab" data-toggle="tab"><!--{$player.from_array.name}-->在线播放</a>
+                                    <a href="javascript:;" data-target="#<!--{$player.from}-->-tab" data-toggle="tab"><!--{$player.from_array.name}-->Онлайн проигрыватель</a>
                                 </li>
                                 <!--{foreach key="k" value="from" from="$video.from_array.play"}-->
                                 <!--{if $player.from!=$from.val}-->
                                     <li>
-                                        <a href="javascript:;" data-target="#<!--{$from.val}-->-tab" data-toggle="tab"><!--{$from.name}-->在线播放</a>
+                                        <a href="javascript:;" data-target="#<!--{$from.val}-->-tab" data-toggle="tab"><!--{$from.name}-->Онлайн проигрыватель</a>
                                     </li>
                                <!--{/if}-->
                                 <!--{/foreach}-->
@@ -76,7 +76,7 @@
                         <div class="section_aside">
                             <div id="cartoon_hot_list">
                                 <div class="section_aside_tit hotlist-tit">
-                                    <h2>热播榜</h2>
+                                    <h2>Популярное</h2>
                                 </div>
                                 <div class="section_aside_hotlist">
                                     <ul class="section_aside_lst section_aside_lst_score">
@@ -112,7 +112,7 @@
                         <div class="sort_nav clearfix" id="subnav">
                             <div class="sort_nav_bx">
                                 <ul class="sort_nav_lst">
-                                    <li class="top_nav_li active"><a href="#tab-ulike" data-target="#tab-ulike" data-toggle="tab">猜你喜欢</a></li>
+                                    <li class="top_nav_li active"><a href="#tab-ulike" data-target="#tab-ulike" data-toggle="tab">Вам также может понравиться</a></li>
                                 </ul>
                             </div>
                         </div>
